# spellbook

./: .gitignore  DOCS.md  README.md  TODO.txt  card_collection.py  card_list.py  directories.py  justfile  main.py  mtg_db.py  pyproject.toml  requirements.txt
src/spellbook/: __init__.py  card_collection.py  card_list.ebnf  card_list.py  card_list_parser.py  main.py  mtg_db.py
